// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MoreButton matches snapshot (empty) 1`] = `
<span
  class="more-button bp6-popover-target"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="bp6-button bp6-disabled"
    disabled=""
    tabindex="-1"
    title="More actions"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-more"
    >
      <svg
        data-icon="more"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M2 6a2 2 0 1 1 0 4 2 2 0 0 1 0-4m6 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4m6 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`MoreButton matches snapshot (full) 1`] = `
<span
  class="more-button bp6-popover-target"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="bp6-button"
    title="More actions"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-more"
    >
      <svg
        data-icon="more"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M2 6a2 2 0 1 1 0 4 2 2 0 0 1 0-4m6 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4m6 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</span>
`;
